# cookiecutter-data-science

./: Git-annex for zData walkthrough.md  README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  noxfile.py  params.yaml  pyproject.toml  requirements.txt  tox.ini
{{ cookiecutter.repo_name }}/.github/workflows/: tests.yaml
{{ cookiecutter.repo_name }}/src/data/: preprocess.py  preprocess_data.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/data/: preprocess.py
{{ cookiecutter.repo_name }}/tests/: test_code.py
