[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]
license = "{{ cookiecutter.open_source_license }}"
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.min_python_version }}"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
nox = "^2022.1.7"
flake8 = "^4.0.1"
coverage = {extras = ["toml"], version = "^6.4"}
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
