[build-system]
requires      = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
authors = [{ name = "{{ cookiecutter.author_name }}"}]
license = { file = "LICENSE" }
dependencies = []
requires-python = ">={{ cookiecutter.min_python_version }}"

[project.optional-dependencies]
dev = ["pytest", "nox", "flake8", "coverage", "pytest-cov", "mypy", "dvc", "pre-commit"]
